# obs-stroke-glow-shadow

./: CMakeLists.txt  README.md  buildspec.json  installer.iss.in
.github/assets/images/: stroke_glow_shadow.psd
.github/workflows/: build.yml
data/locale/: en-US.ini  es-ES.ini  zh-CN.ini
data/shaders/: alpha_blur_1d.effect  anti_alias_1d.effect  dual_kawase_up_sample.effect  fill_stroke.effect  fill_stroke_source.effect  glow.effect  glow_source.effect  jump-flood-sdf-source.effect  jump-flood-sdf.effect  mix.effect  render_output.effect  stroke.effect  stroke_inner.effect
src/: anti-alias.c  anti-alias.h  defines.h  glow.c  glow.h  obs-composite-blur-filter.c  obs-glow-filter.c  obs-glow-filter.h  obs-glow.h  obs-stroke-filter.c  obs-stroke-filter.h  obs-stroke-plugin.c  obs-stroke.h  obs-utils.c  obs-utils.h  stroke.c  stroke.h  version.h
src/blur/: alpha-blur.c  alpha-blur.h  dual-kawase.c  dual-kawase.h
